301backup/Dulanya/5_points/301_15_path_following/Additional_HD.cydsn/REBUILD.log
--------------- Rebuild Started: 10/17/2023 18:01:39 Project: main.c, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM3\ARM_GCC_541\Debug\main.o
main.c: In function 'changeDirection':
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
main.c:163:9: error: 'C' undeclared (first use in this function)
         C
         ^
main.c:163:9: note: each undeclared identifier is reported only once for each function it appears in
main.c:164:5: error: expected ';' before '}' token
     }
     ^
--------------- Rebuild Failed: 10/17/2023 18:01:39 ---------------
